[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/decreto.jpg" type="Texture" id=1]
[ext_resource path="res://Sprites/images.png" type="Texture" id=2]
[ext_resource path="res://World3.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.909804, 0.32549, 0.32549, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.270588, 0.780392, 0.313726, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0588235, 0.415686, 0.92549, 1 )

[node name="World3" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 510.75, 299.75 )
scale = Vector2( 0.908889, 1.00921 )
texture = ExtResource( 1 )

[node name="titulo" type="Label" parent="."]
margin_left = 391.0
margin_top = 15.0
margin_right = 616.0
margin_bottom = 95.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 1 )
text = "O que é um decreto?"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="explicacaoLei" type="Label" parent="."]
margin_left = 31.0
margin_top = 110.0
margin_right = 1006.0
margin_bottom = 190.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 1 )
text = "Trata-se de um mecanismo que permite que as decisões sejam tomadas individualmente (por parte de um só poder). 
Por essa razão, os decretos servem somente para decisões que dependem apenas de um dos três poderes."
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta1" type="Button" parent="."]
margin_left = 33.0
margin_top = 473.0
margin_right = 334.0
margin_bottom = 561.0
text = "Não, o decreto apenas depende de um poder"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta2" type="Button" parent="."]
margin_left = 351.0
margin_top = 474.0
margin_right = 674.0
margin_bottom = 560.0
text = "Sim, preciso de permissão para criar um decreto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta3" type="Button" parent="."]
margin_left = 701.0
margin_top = 476.0
margin_right = 975.0
margin_bottom = 562.0
text = "Não sei o que fazer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="presidente" type="Sprite" parent="."]
position = Vector2( 506, 312 )
texture = ExtResource( 2 )

[node name="indicadorSocial" type="Label" parent="."]
margin_left = 43.0
margin_top = 59.0
margin_right = 212.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 2 )
text = "Indicador Social:"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="indicadorEconomico" type="Label" parent="."]
margin_left = 41.0
margin_top = 31.0
margin_right = 238.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 3 )
text = "Indicador Econômico:"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pergunta" type="Label" parent="."]
margin_left = 258.0
margin_top = 431.0
margin_right = 773.0
margin_bottom = 462.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 4 )
text = "Você é o presidente e faz parte dos três poderes. Você precisa de aprovação dos
outros poderes para decretar um decreto?"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="resposta1" to="." method="_on_resposta1_pressed"]
[connection signal="pressed" from="resposta2" to="." method="_on_resposta2_pressed"]
[connection signal="pressed" from="resposta3" to="." method="_on_resposta3_pressed"]
